--- a/quiz_app/pubspec.yaml
+++ b/quiz_app/pubspec.yaml
@@ -41,13 +41,14 @@ dependencies:
 
   # state management, intelligent dependency injection, and route management
   get: ^4.1.4
-  flutter_launcher_icons: ^0.11.0
-flutter_launcher_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "assets/icons/launcher.png"
-  min_sdk_android: 21  
-
+  # change_app_package_name: ^1.1.0
+#   flutter_launcher_icons: ^0.13.1
+# flutter_launcher_icons:
+#   android: "launcher_icon"
+#   ios: true
+#   image_path: "assets/icons/launcher.png"
+#   min_sdk_android: 21  
+  
 
 dev_dependencies:
   flutter_test:
